# Howl

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/teamhowl/howl/: BlockChainInstrumentedTest.java  ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  block.cpp  block.h  blockChain.cpp  blockChain.h  howl.cpp
app/src/main/java/com/teamhowl/howl/: MainActivity.java
app/src/main/java/com/teamhowl/howl/activities/: Home.java  HomeActivity.java  MainActivity.java  MessageActivity.java  SplashScreen.java  SplashScreenActivity.java
app/src/main/java/com/teamhowl/howl/controllers/: ChatAdapter.java  ChatRoomAdapter.java  ConnectListViewAdapter.java  MessageAdapter.java  PendingBlockDao.java  PooledBlockDao.java  StashedBlockDao.java  UserAdapter.java  UserDao.java
app/src/main/java/com/teamhowl/howl/models/: BlockChain.java  BlockChainStub.java  ChatRoom.java  Message.java  (+4 more)
app/src/main/res/layout/: activity_home.xml  activity_message.xml  activity_spash_screen.xml  cardview_chatroom.xml  cardview_received_message.xml  cardview_sent_message.xml  cardview_user.xml  connect_card_view.xml  fragment_chat_room.xml  fragment_connect.xml  fragment_settings.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml  mobile_navigation2.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/teamhowl/howl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
